--- a/index.html
+++ b/index.html
@@ -9,19 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./src/css/main.css">
 </head>
 
 <body class="h-full">
@@ -68,7 +56,7 @@
       </div>
 
       <div class="relative w-full lg:w-1/2 sepia-[.10] order-1 lg:order-2">
-        <img src="../images/image-header-desktop.jpg" class="w-full h-full object-cover" alt="">
+        <img src="./images/image-header-desktop.jpg" class="w-full h-full object-cover" alt="">
         <div class="absolute inset-0 bg-violet-700 opacity-50"></div>
       </div>
 
